# rust-playground

./: Cargo.toml
src/: fizz_buzz.rs  prime.rs
