[package]
name = "rust-playground"
version = "0.1.0"
authors = ["nokazn <nokazn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "prime"
path = "./src/prime.rs"

[[bin]]
name = "fizz_buzz"
path = "./src/fizz_buzz.rs"
